crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/invalid_function_visibility/free_functions/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Function must have explicit visibility (public, internal, external, or private).
   ╭─[input.sol:1:1]
   │
 1 │ function missing() {}
   │ ──────────┬──────────  
   │           ╰──────────── Error occurred here.
───╯
